Dcards and Pool components added

--- a/app/src/pages/pool.css
+++ b/app/src/pages/pool.css
@@ -1,6 +1,31 @@
-.grainy-gradient {
-    background: linear-gradient(270deg, #fcfcfc, #fbfbfb);
-    position: relative;
-  }
-  
-  
+
+
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flipped {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
