--- a/app/src/index.css
+++ b/app/src/index.css
@@ -8,7 +8,7 @@
     @apply font-pop;
   }
   body {
-    background: #f1f1f1;
+    background: #ffffff;
   }
   h1 {
     @apply text-xl font-medium capitalize;
